# LuaInterpreter

./: .gitignore  CMakeLists.txt  Lua51Grammar.g4  Lua55Grammar.g4  Readme.md
examples/invalid/syntax/: 1.lua  2.lua  3.lua  4.lua  5.lua
examples/valid/: assignment.lua  control.lua  coroutine.lua  error.lua  factorial.lua  function.lua  imap.lua  io.lua  iteration.lua  map.lua  numbers.lua  stack.lua  strings.lua  tables.lua
src/: AST.h  AST.hpp  Compiler.h  Interpreter.h  Interpreter.hpp  listener.cpp  listener.h  listener.hpp  main.cpp  rwlock.hpp
src/AST/: Base.cpp  Base.h  Base.hpp  Expression.cpp  Expression.h  Expression.hpp  Statement.cpp  Statement.h  Statement.hpp
src/Compiler/: Compiler.cpp  Compiler.h  Compiler.hpp  Instruction.cpp  Instruction.h  Instruction.hpp  Static.cpp  Static.h
src/Interpreter/: Base.cpp  Base.h  Base.hpp  Core.cpp  Core.h  Core.hpp  Static.hpp  Value.cpp  Value.h  Value.hpp
src/Interpreter/libs/: extension.cpp  extension.h
src/Interpreter/libs/coroutine/: coroutine.cpp  coroutine.h
src/Interpreter/libs/error/: error.cpp  error.h
src/Interpreter/libs/io/: io.cpp  io.h
src/Interpreter/libs/iterators/: iterators.cpp  iterators.h  map.cpp  map.h
src/Interpreter/libs/math/: math.cpp  math.h
src/Interpreter/libs/string/: string.cpp  string.h
src/Interpreter/libs/typing/: type.cpp  type.h
